# eMRTD

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/emrtd/: mrz.h
programs/: CMakeLists.txt
programs/BAC/: CMakeLists.txt  bac.c
